# imagefilters_package

assignment3/: README.md  pyproject.toml  timing-report.txt
assignment3/in3110_instapy/: __main__.py  cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/in3110_instapy.egg-info/: PKG-INFO
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
