[build-system]
requires = [
    "setuptools>=61",
    # 4110 only:
    # "cython>=3",
]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
requires-python = ">=3.8"
license = {text = "MIT License"}
name = "in3110_instapy"
authors = [
    {name = "Cristina Lakasz", email = "cristila@uio.no"},
]
description = "A python package providing grayscale and sepia filters using pure python, numpy, and numba"
readme = "README.md"
keywords = ["filter", "grayscale", "sepia"]
dependencies = [
    "numpy",
    "numba",
    "pillow",
    "line-profiler",
]


[project.scripts]
instapy = "in3110_instapy.cli:main"
